# dllm-ru-300m

./: .gitignore  AGENTS.md  RAG_README.md  README.md  TRAINING_STATUS.md  deploy_experiment.py  dllm  papers.txt  papers_by_category.md  papers_master_catalog.md  papers_new_arxiv.md  pyproject.toml  rag_complete.py  rag_launcher.py  rag_system.py  repl  requirements.txt  setup_rag.sh  setup_remote.sh  site_code  train.py
configs/: dllm_300m.yaml  ds_config.json  train.yaml
docs/plans/: 2026-02-28-dllm-ru-300m-design.md  2026-02-28-dllm-ru-300m-implementation.md  diffusion-llm-training.md
papers/: found_papers.txt
rag_data/qdrant/: meta.json
scripts/: benchmark.py  benchmark_quick.py  create_sample_data.py  download_code_datasets.py  download_data.py  download_hf_datasets.py  download_simple_code.py  monitor_training.py  preprocess_data.py  setup_server.sh  train_tokenizer.py  verify_server.py
src/dllm/: config.py
src/dllm/data/: __init__.py  dataset.py  preprocess.py
src/dllm/model/: __init__.py  diffusion.py  layers.py  model.py
src/dllm/training/: utils.py
storage/: metadata.db
storage/kuzu/: graph.db
tests/: test_diffusion.py  test_model.py
