[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dllm-ru-300m"
version = "0.1.0"
description = "Bilingual Russian-English Diffusion LLM (300M params)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "deepspeed>=0.12.0",
    "flash-attn>=2.3.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "sentencepiece>=0.1.99",
    "wandb",
    "tensorboard",
    "accelerate",
    "huggingface-hub",
    "tqdm",
    "numpy",
    "scipy",
    "tiktoken",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]

[tool.black]
line-length = 100
target-version = ['py310']
